# connectio-rad-v2

./: .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  CTempvitest-spc.txt  README.md  _commit_msg.txt  databricks.yml  eslint.config.mjs  fix_env.py  fix_tests.py  genie_v1_v2_comprehensive_parity_assessment_prompt.md  nx.json  package-lock.json  package.json  playwright.config.ts  pr_35_comments.txt  pr_35_line_comments.txt  pr_comments.txt  pyproject.toml  test_query_builder.py  tsconfig.base.json  update_docs.py
apps/api/: app.yaml  main.py  pyproject.toml  requirements.txt
apps/api/adapters/: __init__.py
apps/api/adapters/cq/: __init__.py  cq_databricks_adapter.py  cq_lab_databricks_blockers.md
apps/api/adapters/envmon/: envmon_databricks_adapter.py  envmon_v2_adapter.py
apps/api/adapters/platform/: plant_adapter.py
apps/api/adapters/poh/: __init__.py  poh_databricks_adapter.py
apps/api/adapters/quality/: quality_databricks_adapter.py
apps/api/adapters/spc/: spc_databricks_adapter.py  spc_databricks_chart_adapter.py
apps/api/contracts/: generated.py  spc.py
apps/api/routes/: _databricks.py  auth.py  auth_diagnostics.py  connected_quality_lab.py  envmon.py  envmon_v2.py  health.py  platform.py  process_order.py  quality.py  spc.py  trace2.py  warehouse360.py  workspaces.py
apps/api/scripts/: sync_contracts.py
apps/api/shared/: __init__.py  proxy_client.py
apps/api/static/: README.md  index.html
apps/api/tests/: conftest.py  test_auth.py  test_health.py  test_quality_readonly_evidence.py  test_workspaces.py
docs/: README.md
(+1187 files in other folders)
